samples/_failures_safe/1761606709_536023_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76593738.c: In function ‘main’:
./samples/SAFE/__tmp_76593738.c:159:16: error: missing terminating " character
  159 |         printf("%4d:%-6
      |                ^~~~~~~~
./samples/SAFE/__tmp_76593738.c:159:9: error: expected expression at end of input
  159 |         printf("%4d:%-6
      |         ^~~~~~
./samples/SAFE/__tmp_76593738.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76593738.c:159:9: error: expected declaration or statement at end of input
